--- a/pom.xml
+++ b/pom.xml
@@ -19,4 +19,13 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
     </properties>
+    <plugins>
+    <plugin>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.1</version>
+        <configuration>
+            <fork>true</fork>
+        </configuration>
+    </plugin>
+</plugins>
 </project>
